// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize-aliases should correctly normalize aliases 1`] = `
Object {
  "$dir3": "<PROJECT_ROOT>/src/dir3",
  "@dir": "<PROJECT_ROOT>/src/dir",
  "@dir2": "<PROJECT_ROOT>/src/dir2",
  "@file": "<PROJECT_ROOT>/src/file.js",
  "@file2": "<PROJECT_ROOT>/src/file2.js",
  "@material-ui": "<PROJECT_ROOT>/node_modules/@material-ui/ie-10/ie-10.js",
  "external-package": "/absolute_path/external-package",
  "my-package": "<PROJECT_ROOT>/node_modules/some-package",
}
`;

exports[`normalize-aliases should correctly normalize aliases 2`] = `
Object {
  "$dir3": "<PROJECT_ROOT>/src/dir3",
  "@dir": "<PROJECT_ROOT>/src/dir",
  "@dir2": "<PROJECT_ROOT>/src/dir2",
  "@file": "<PROJECT_ROOT>/src/file.js",
  "@file2": "<PROJECT_ROOT>/src/file2.js",
}
`;
